fix vertical align clear

--- a/sass/gridle/_mixins.scss
+++ b/sass/gridle/_mixins.scss
@@ -492,6 +492,7 @@
 	$align : middle
 ) {
 	font-size:0;
+	clear:both;
 
 	> * {
 		display:inline-block;
