--- a/sass/gridle/_silent-classes.scss
+++ b/sass/gridle/_silent-classes.scss
@@ -65,7 +65,6 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	clear:both;
 }
 %gridle-container-debug-common {
 	background-color:#f5f5f5;
